added standalone headless terminal app, just for downloading "stahlwerk" with playlist